*Jira/sc3293/retrieve/unpackaged/unpackaged/objects/Order_Submit_Validation__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Message__c</fullName>
        <label>Link Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Field_API_Name__c</fullName>
        <label>Relationship Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Order_Submit_Validation</label>
    <listViews>
        <fullName>All_with_Details</fullName>
        <columns>Active__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Object_Label__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Relationship_Field_API_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Link_Message__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
    </listViews>
    <pluralLabel>Order_Submit_Validation</pluralLabel>
</CustomObject>